# rust-sql-rest-api

./: Cargo.toml
config/: Settings.yaml
pkg/: Cargo.toml
pkg/src/: database.rs  lib.rs  logger.rs  query.rs  response.rs  status_code.rs  threadpool.rs  ultil.rs
src/: main.rs
src/app/: mod.rs  query.rs  route.rs
src/configs/: config.rs
src/usecase/book/: book.rs  book_filter.rs  book_handler.rs  book_service.rs  mod.rs
