[package]
name = "rust-sql"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
uuid = "0.8"
async-trait = "0.1.52"
pkg = { path = "pkg" }
mysql = "*"
log = { version = "0.4", features = ["std", "serde"] }
tokio = { version = "1.15.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
confy = "0.4.0"
yaml-rust = "0.4"
serde_yaml = "0.8"
bevy_reflect = "0.6.0"
