[package]
name = "pkg"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bson = { version = "2.1.0", features = ["chrono-0_4"] }
chrono = "0.4"
mongodb = { version = "2.0.0", features = ["tokio-runtime"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = { version = "0.4", features = ["std", "serde"] }
mysql = "*"
